# grokicad

./: .gitignore  README.md
backend/: Cargo.toml  nohup.out  redeploy.sh
backend/nginx/: grokicad-api.conf  setup-nginx.sh
backend/src/: main.rs  openapi.rs  types.rs
backend/src/controllers/: distill.rs  grok.rs  hook.rs  repo.rs
backend/src/routes/: distill.rs  grok.rs  hook.rs  mod.rs  repo.rs
backend/src/services/: distill.rs  git.rs  mod.rs
database/: Cargo.toml  README.md  database-create.sh  database-down.sh  database-test.sh  database-up.sh  docker-compose.yml  init.sql
database/src/: lib.rs  main.rs  messages.rs  xai_client.rs
database/tests/: integration.rs
grokprompts/: systemprompt.txt
kicad-example-files/BMS/: BatteryBalance.kicad_sch  levelshifts.kicad_sch  power.kicad_sch  tempmux.kicad_sch  uBMS-2.kicad_pcb  uBMS-2.kicad_prl  uBMS-2.kicad_pro  uBMS-2.kicad_sch  voltmux.kicad_sch
kicad-example-files/Smart Watch/: SmartWatch V5.kicad_prl  SmartWatch V5.kicad_pro  SmartWatch V5.kicad_sch
kicanvas/: .env.example  .gitignore  nohup.out  package-lock.json  package.json  wrangler.jsonc
kicanvas/debug/: board.html  embedded.html  index.html  schematic.html
kicanvas/docs/docs/: home.md
kicanvas/docs/overrides/: standalone.html
kicanvas/scripts/: bundle.js
kicanvas/src/kc-ui/: element.ts  kc-ui.css
schematic-distiller/: setup_venv.sh
schematic-distiller/docs/: DISTILL_FEATURES.md  distill_changes.md  index.rst
schematic-distiller/kicad_sch_api.egg-info/: SOURCES.txt
schematic-distiller/kicad_sch_api/collections/: components.py
(+25 files in other folders)
